# soundblok

./: .gitmodules  meson.build
src/: main.c  meson.build
subprojects/: FreeRTOS.wrap  sdk.wrap  wavemaker.wrap
test/: meson.build  soundblok_test.cpp
